# Burnout5

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  types.hpp
src/GameShared/GameClasses/Containers/: CgsFlagSet.h
src/GameShared/GameClasses/Core/: CgsAssert.h  CgsStringUtils.cpp  CgsStringUtils.h
src/GameShared/GameClasses/Development/AssertSystem/: CgsAssertManager.h
src/GameShared/GameClasses/Module/: CgsDataBuffer.cpp  CgsDataBuffer.h  CgsDataStructure.cpp  CgsDataStructure.h  CgsIOBuffer.cpp  CgsIOBuffer.h  CgsModule.cpp  CgsModule.h  CgsModuleSingleBuffered.cpp  CgsModuleSingleBuffered.h  CgsModuleSingleBufferedTemplate.h  CgsVariableEventQueue.h
src/GameShared/GameClasses/System/: CgsHardwareInit.h
src/GameShared/GameClasses/System/PC/: CgsHardwareInitPC.cpp
src/GameShared/GameClasses/System/Resource/: CgsResourceRequestQueue.h
src/GameShared/GameClasses/System/Threads/: CgsThreadLayout.h
src/GameSource/Game/: BrnGameModule.cpp  BrnGameModule.h  BrnGameModuleIO.cpp  BrnGameModuleIO.h
src/GameSource/Main/: BrnMain.cpp
src/GameSource/Resource/SharedIO/: BrnGameDataRequestQueue.h
src/cmn/rw/core/base/: ostypes.h
src/pc/gcm/renderengine/: device.cpp  device.h
